# SuikaiBot

./: .gitignore  LICENSE  README.md  pyproject.toml
pyenv/: pyvenv.cfg
